@@ -322,6 +322,12 @@ about this function.
 
 .. _`Using XPath`: streams.html#using-xpath
 
+Match templates are applied both to the original markup as well to the
+generated markup. The order in which they are applied depends on the order
+they are declared in the template source: a match template defined after
+another match template is applied to the output generated by the first match
+template. The match templates basically form a pipeline.
+
 This directive can also be used as an element:
 
 .. code-block:: genshi
